After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 745755 - pngparse prints too much info messages
pngparse prints too much info messages
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
1.4.1
Other Linux
: Normal normal
: 1.5.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-03-06 17:05 UTC by Xavier Claessens
Modified: 2015-03-06 19:07 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
pngparse: stop spamming info messages (944 bytes, patch)
2015-03-06 17:08 UTC, Xavier Claessens
committed Details | Review

Description Xavier Claessens 2015-03-06 17:05:10 UTC
gst_png_parse_handle_frame() prints an INFO message for every 8192 bytes chunks.
Comment 1 Xavier Claessens 2015-03-06 17:08:42 UTC
Created attachment 298740 [details] [review]
pngparse: stop spamming info messages
Comment 2 Olivier Crête 2015-03-06 18:33:55 UTC
Review of attachment 298740 [details] [review]:

::: gst/videoparsers/gstpngparse.c
@@ +176,3 @@
       goto beach;
 
+    GST_TRACE_OBJECT (parse, "%" GST_FOURCC_FORMAT " chunk, %u bytes",

I think it should LOG level not TRACE
Comment 3 Olivier Crête 2015-03-06 18:47:35 UTC
Forget what I said, I Though it was once per frame, merged:

commit 92028e5da0f5acf986fb631ed30936ca87cfb0de
Author: Xavier Claessens <xavier.claessens@collabora.com>
Date:   Fri Mar 6 12:07:47 2015 -0500

    pngparse: stop spamming info messages
    
    https://bugzilla.gnome.org/show_bug.cgi?id=745755
Comment 4 Tim-Philipp Müller 2015-03-06 18:51:19 UTC
Usually there's only a few header chunks and one data chunk, but the data can also be split up in multiple small data chunks.
Comment 5 Nicolas Dufresne (ndufresne) 2015-03-06 19:07:33 UTC
For reference this was with souphttpsrc.