pngparse: stop spamming info messages

https://bugzilla.gnome.org/show_bug.cgi?id=745755